--- a/lib/rsg_doc/docgenTemplates/docgen.brs.html.erb
+++ b/lib/rsg_doc/docgenTemplates/docgen.brs.html.erb
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="<%= stylePath %>" ></link>
   </head>
   <body>
-    <h1> <%= brs_doc_content[:name] %> </h1>
+    <h1 class="title"> <%= brs_doc_content[:name] %> </h1>
     <% if brs_doc_content[:functions].length > 0 %>
-    <h2> Functions: </h2>
-      <% brs_doc_content[:functions].each do |function| %>
-        <% if function[:deprecated] %>
-          <h3>Deprecated: <%= function[:deprecated] %></h3>
-        <% end %>
-        <h3> <%= function[:functionname] %> </h3>
-        <p> <%= function[:description].join(" ") %> </p>
-        <% if function[:params].length > 0 %>
-          <% function[:params].each do |param| %>
-            <h4> <%= param[:name] %> </h4>
-            <p>  <%= param[:description] %></p>
-          <% end %>
-        <% end %>
-        <% if function[:return] %>
-          <h3>Returns: </h3>
-          <p> <%= function[:return] %> </p>
-        <% end %>
-        <% if function[:since] %>
-          <h4>Added in <%= function[:since] %></h4>
+    <div class="section-container">
+      <h2 class="section-title"> Functions </h2>
+        <% brs_doc_content[:functions].each do |function| %>
+          <div class="function-container">
+            <h2 class="function-name" name="<%= function[:functionname] %>"> #<%= function[:functionname] %> </h2>
+
+            <% if function[:deprecated] %>
+              <div class="function-deprecated function-section">
+                <h3>Deprecated</h3>
+                <p><%= function[:deprecated] %></p>
+              </div>
+            <% end %>
+            <div class="function-section">
+              <h3>Description</h3>
+              <p> <%= function[:description].join(" ") %> </p>
+            </div>
+            <% if function[:params].length > 0 %>
+              <div class="function-section">
+                <h3>Parameters</h3>
+                <% function[:params].each do |param| %>
+                  <p class="function-parameter"> <%= param[:name] %> </p>
+                  <p class="function-parameter-description"> <%= param[:description] %></p>
+                <% end %>
+              </div>
+            <% end %>
+            <% if function[:return] %>
+              <div class="function-section">
+                <h3>Return Value</h3>
+                <p> <%= function[:return] %> </p>
+              </div>
+            <% end %>
+            <% if function[:since] %>
+              <div class="function-section">
+                <h3>Last Updated</h3>
+                <p>Version <%= function[:since] %></p>
+              </div>
+            <% end %>
+          </div>
         <% end %>
       <% end %>
-    <% end %>
+    </div>
   </body>
 </html>
