--- a/lib/rsg_doc/docgenTemplates/defaultStyling.css
+++ b/lib/rsg_doc/docgenTemplates/defaultStyling.css
@@ -3,7 +3,23 @@
 
 body{
   font-family: Arial, Helvetica, sans-serif;
-  margin: auto;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(220, 20, 60);
+}
+
+a:hover {
+  text-decoration: none;
+  font-weight: bold;
+  color: rgb(220, 20, 60);
+}
+
+a:visited {
+  text-decoration: none;
+  color: rgb(220, 20, 60);
 }
 
 .title{
